--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "export $(grep -v '^#' .env | xargs) && watchexec -r -e toml,gleam gleam run",
-    "tw": "tailwindcss -i ./priv/static/src/css/main.css -o ./priv/static/dist/css/styles.css --watch",
+    "dev": "concurrently -n server,typescript,tailwind \"pnpm watch:server\" \"pnpm watch:ts\" \"pnpm watch:tw\"",
+    "watch:server": "export $(grep -v '^#' .env | xargs) && watchexec -r -e toml,gleam gleam run",
+    "watch:tw": "tailwindcss -i ./priv/static/sources/css/main.css -o ./priv/static/dist/css/styles.css --watch",
+    "watch:ts": "tsc -w",
     "gen:sql": "gleam run -m sqlgen"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.3.3"
+    "concurrently": "^8.2.2",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   }
 }
