--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "tailwindcss": "^3.3.3",
+    "tsc": "^2.0.4",
     "typescript": "^5.2.2"
   }
 }
