use dotenv package to load environment variables

--- a/gleam.toml
+++ b/gleam.toml
@@ -23,6 +23,7 @@ simplifile = "~> 0.1"
 migrant = "~> 0.1"
 mist = "~> 0.14"
 gleam_http = "~> 3.5"
+dot_env = "~> 0.1"
 
 [dev-dependencies]
 gleeunit = "~> 0.10"
