--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for jsorm on 2023-10-22T01:35:34+01:00
+# fly.toml app configuration file generated for jsorm on 2023-11-08T18:42:30Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -6,7 +6,17 @@
 app = "jsorm"
 primary_region = "lhr"
 
+[deploy]
+  strategy = "rolling"
+
+[experimental]
+  auto_rollback = true
+
 [build]
+
+[[mounts]]
+  source = "jsorm"
+  destination = "/app/data"
 
 [http_service]
   internal_port = 8080
@@ -15,8 +25,3 @@ primary_region = "lhr"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
-
-
-[mounts]
-  source="jsorm"
-  destination="/app/data"
