--- a/gleam.toml
+++ b/gleam.toml
@@ -1,6 +1,6 @@
 name = "jsorm"
 version = "0.1.0"
-gleam = ">= 0.32.0"
+gleam = ">= 0.33.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
@@ -11,21 +11,22 @@ gleam = ">= 0.32.0"
 # links = [{ title = "Website", href = "https://gleam.run" }]
 
 [dependencies]
-gleam_stdlib = "~> 0.32"
-plunk = "~> 1.0"
-wisp = "~> 0.6"
-nakai = "~> 0.8"
-ids = "~> 0.10"
-sqlight = "~> 0.8"
-gleam_json = "~> 0.6"
-gleam_hackney = "~> 1.1"
-gleam_erlang = "~> 0.22"
-simplifile = "~> 0.1"
+gleam_stdlib = "~> 0.34"
+plunk = "~> 1.1"
+wisp = "~> 0.8"
+nakai = "~> 0.9"
+ids = { path = "./src/ids"  }
+sqlight = "~> 0.9"
+gleam_json = "~> 0.7"
+gleam_hackney = "~> 1.2"
+gleam_erlang = "~> 0.23"
+simplifile = "~> 0.4"
 migrant = "~> 0.1"
-mist = "~> 0.14"
+mist = "~> 0.15"
 gleam_http = "~> 3.5"
-dot_env = "~> 0.1"
-birl = "~> 0.17"
+dot_env = "~> 0.2"
+birl = "~> 1.3"
+gleam_otp = "~> 0.8"
 
 [dev-dependencies]
-gleeunit = "~> 0.10"
+gleeunit = "~> 1.0"
