--- a/gleam.toml
+++ b/gleam.toml
@@ -27,6 +27,7 @@ gleam_http = "~> 3.5"
 dot_env = "~> 0.2"
 birl = "~> 1.3"
 gleam_otp = "~> 0.8"
+gleam_crypto = "~> 0.5"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
