--- a/gleam.toml
+++ b/gleam.toml
@@ -12,22 +12,22 @@ gleam = ">= 0.33.0"
 
 [dependencies]
 gleam_stdlib = "~> 0.34"
-plunk = "~> 1.1"
-wisp = "~> 0.8"
+plunk = "~> 1.2"
+wisp = "~> 0.10"
 nakai = "~> 0.9"
-ids = { path = "./src/ids"  }
 sqlight = "~> 0.9"
 gleam_json = "~> 0.7"
 gleam_hackney = "~> 1.2"
 gleam_erlang = "~> 0.23"
-simplifile = "~> 0.4"
-migrant = "~> 0.1"
+simplifile = "~> 1.2"
+migrant = "~> 0.2"
 mist = "~> 0.15"
 gleam_http = "~> 3.5"
 dot_env = "~> 0.2"
-birl = "~> 1.3"
+birl = "~> 1.4"
 gleam_otp = "~> 0.8"
-gleam_crypto = "~> 0.5"
+gleam_crypto = "~> 1.0"
+ids = "~> 0.12"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
