Update deps and fix compiler warnings

--- a/gleam.toml
+++ b/gleam.toml
@@ -14,7 +14,6 @@ gleam = ">= 0.33.0"
 gleam_stdlib = "~> 0.34"
 plunk = "~> 1.2"
 wisp = "~> 0.10"
-nakai = "~> 0.9"
 sqlight = "~> 0.9"
 gleam_json = "~> 0.7"
 gleam_hackney = "~> 1.2"
@@ -28,6 +27,7 @@ birl = "~> 1.4"
 gleam_otp = "~> 0.8"
 gleam_crypto = "~> 1.0"
 ids = "~> 0.12"
+nakai = ">= 0.10.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
