--- a/gleam.toml
+++ b/gleam.toml
@@ -22,7 +22,7 @@ simplifile = "~> 1.2"
 migrant = "~> 0.2"
 mist = "~> 0.15"
 gleam_http = "~> 3.5"
-dot_env = "~> 0.2"
+dot_env = ">= 0.5.1 and < 1.0.0"
 birl = "~> 1.4"
 gleam_otp = "~> 0.8"
 gleam_crypto = "~> 1.0"
