--- a/gleam.toml
+++ b/gleam.toml
@@ -1,6 +1,6 @@
 name = "jsorm"
 version = "0.1.0"
-gleam = ">= 0.32.0"
+gleam = "~> 1.13"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
@@ -11,23 +11,23 @@ gleam = ">= 0.32.0"
 # links = [{ title = "Website", href = "https://gleam.run" }]
 
 [dependencies]
-gleam_stdlib = "~> 0.34"
-plunk = "~> 1.2"
-wisp = "~> 0.10"
-sqlight = "~> 0.9"
-gleam_json = "~> 0.7"
-gleam_hackney = "~> 1.2"
-gleam_erlang = "~> 0.23"
-simplifile = "~> 1.2"
-migrant = "~> 0.2"
-mist = "~> 0.15"
-gleam_http = "~> 3.5"
-dot_env = ">= 0.5.1 and < 1.0.0"
-birl = "~> 1.4"
-gleam_otp = "~> 0.8"
-gleam_crypto = "~> 1.0"
-ids = "~> 0.12"
-nakai = ">= 0.10.0 and < 1.0.0"
+gleam_stdlib = ">= 0.67.0 and < 1.0.0"
+plunk = ">= 2.0.0 and < 3.0.0"
+wisp = ">= 2.1.0 and < 3.0.0"
+sqlight = ">= 1.0.3 and < 2.0.0"
+dot_env = ">= 1.2.0 and < 2.0.0"
+mist = ">= 5.0.3 and < 6.0.0"
+nakai = ">= 1.1.2 and < 2.0.0"
+birl = ">= 1.8.0 and < 2.0.0"
+gleam_erlang = ">= 1.3.0 and < 2.0.0"
+gleam_hackney = ">= 1.3.2 and < 2.0.0"
+gleam_json = ">= 3.1.0 and < 4.0.0"
+glanoid = ">= 1.0.1 and < 2.0.0"
+gleam_http = ">= 4.3.0 and < 5.0.0"
+gleam_regexp = ">= 1.1.1 and < 2.0.0"
+gleam_crypto = ">= 1.5.1 and < 2.0.0"
+migrant = ">= 1.0.0 and < 2.0.0"
+simplifile = ">= 2.3.1 and < 3.0.0"
 
 [dev-dependencies]
-gleeunit = "~> 1.0"
+gleeunit = ">= 1.9.0 and < 2.0.0"
